doc: css: fix figures' bg color for dark theme
When using dark theme, figure images with a transparent background would
often look off/unreadable due to being designed for looking good on
a white background.

Fixes #57069.

--- a/doc/_static/css/custom.css
+++ b/doc/_static/css/custom.css
@@ -866,6 +866,10 @@ kbd, .kbd,
     text-align: center;
 }
 
+.rst-content figure img {
+    background-color: var(--figure-image-background-color);
+}
+
 .wy-alert.wy-alert-danger {
     background-color: var(--admonition-danger-background-color);
 }
