--- a/doc/_static/css/dark.css
+++ b/doc/_static/css/dark.css
@@ -90,4 +90,5 @@
     --btn-neutral-background-color: #404040;
     --btn-neutral-hover-background-color: #505050;
     --footer-color: #aaa;
+    --figure-image-background-color: white;
 }
