--- a/doc/_static/css/light.css
+++ b/doc/_static/css/light.css
@@ -88,4 +88,5 @@
     --btn-neutral-background-color: #f3f6f6;
     --btn-neutral-hover-background-color: #e5ebeb;
     --footer-color: #808080;
+    --figure-image-background-color: none;
 }
